--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "timepouch",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "A simple command-line time tracker, inspired by timetrap and built on PouchDB so its database is syncable.",
   "bin": "tp.js",
   "dependencies": {
-    "moment": "~1.7.2",
     "optimist": "~0.3.5",
-    "pouchdb": "~0.0.4"
+    "pouchdb": "~0.0.5",
+    "duration": "*",
+    "dateformat": "*",
+    "easy-table": "*"
   },
   "devDependencies": {},
   "scripts": {
